// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Narration Layout: Pages > renders a past page unchanged 1`] = `
<div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm w-full flex-grow md:mx-0.5 md:min-w-0 md:basis-0 min-h-0 flex flex-col bg-background/60 border-border overflow-hidden"
  >
    <div
      class="flex-grow flex flex-col overflow-hidden p-4 sm:p-1"
    >
      <div
        class="flex flex-col flex-grow overflow-hidden gap-2 -mx-3 -mb-3 px-3 pb-3"
      >
        <div
          class="flex flex-col overflow-hidden narration-text flex-grow border border-border p-2 bg-muted/80 min-h-0 relative"
          dir="ltr"
          style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
        >
          <style>
            [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
          </style>
          <div
            class="w-full flex-auto min-h-0 rounded-[inherit] pr-[11px] [&>div]:!block"
            data-radix-scroll-area-viewport=""
            style="overflow-x: hidden; overflow-y: scroll;"
          >
            <div
              style="min-width: 100%; display: table;"
            >
              <div
                class="absolute top-2 right-2 z-10 flex gap-1"
              >
                <button
                  aria-controls="radix-:rm:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="More narration options"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground narration-tool h-8 w-8"
                  data-base-ui-tooltip-trigger=""
                  data-idle="true"
                  data-state="closed"
                  id="base-ui-:rn:"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="rounded-lg border border-border bg-card px-3.5 py-2.5"
                data-state="closed"
                style="--rl-o: 0;"
              >
                <div
                  class="mb-3 border-l-2 border-primary pl-3 text-label text-muted-foreground"
                  data-state="closed"
                  data-testid="action-line"
                >
                  <div
                    class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                  >
                    <div
                      class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                    >
                      <p>
                        I step onto the pier.
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="narration"
                >
                  <div
                    class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                  >
                    <div
                      class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                    >
                      <p>
                        Boards creak. A gull watches you.
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-2 flex items-center gap-0.5 border-t border-border pt-1.5"
                  data-testid="bubble-actions"
                >
                  <span
                    aria-hidden="true"
                    class="mr-auto text-meta text-muted-foreground"
                  >
                    Turn 
                    2
                  </span>
                  <button
                    aria-label="Edit"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:r15:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-pencil h-4 w-4 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                      />
                      <path
                        d="m15 5 4 4"
                      />
                    </svg>
                  </button>
                  <button
                    aria-label="Copy Text"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:r16:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-copy h-4 w-4 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2"
                        ry="2"
                        width="14"
                        x="8"
                        y="8"
                      />
                      <path
                        d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                      />
                    </svg>
                  </button>
                  <button
                    aria-label="Rewind to Here"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent h-8 w-8 text-destructive hover:text-destructive"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:r17:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-undo2 lucide-undo-2 h-4 w-4 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9 14 4 9l5-5"
                      />
                      <path
                        d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
                      />
                    </svg>
                  </button>
                  <button
                    aria-haspopup="menu"
                    aria-label="More"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:r18:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-ellipsis h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="12"
                        r="1"
                      />
                      <circle
                        cx="5"
                        cy="12"
                        r="1"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="mt-3 flex flex-col gap-2 border border-border rounded-md p-2 bg-background/40"
              >
                <div
                  class="flex items-center justify-end"
                >
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap border font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 text-meta"
                  >
                    Tags
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col items-center gap-2"
        >
          <div
            data-surface-target="gameViewer#pager"
          >
            <nav
              aria-label="pagination"
              class="mx-auto flex w-full justify-center"
              role="navigation"
            >
              <ul
                class="flex flex-row items-center gap-1"
              >
                <li
                  class=""
                >
                  <a
                    aria-label="Go to previous page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pl-2.5"
                    href="#"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-left h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m15 18-6-6 6-6"
                      />
                    </svg>
                    <span
                      class="hidden md:inline"
                    >
                      Previous
                    </span>
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    1
                  </a>
                </li>
                <li
                  class=""
                >
                  <button
                    aria-controls="radix-:r19:"
                    aria-current="page"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="Page 2 of 3 — jump to a page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 w-10"
                    data-state="closed"
                    type="button"
                  >
                    2
                  </button>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    3
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    aria-label="Go to next page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pr-2.5"
                    href="#"
                  >
                    <span
                      class="hidden md:inline"
                    >
                      Next
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-right h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9 18 6-6-6-6"
                      />
                    </svg>
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="flex flex-col gap-2"
        >
          <div
            class="flex items-end"
            data-surface-target="gameViewer#action-box"
          >
            <div
              class="relative flex-grow mr-2 flex-shrink-0"
              data-testid="action-input-wrap"
              style="height: 40px;"
            >
              <textarea
                class="absolute inset-x-0 bottom-0 w-full resize-none rounded-md border border-input bg-background px-3 py-2 text-helper leading-normal placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 overflow-hidden whitespace-nowrap h-10"
                placeholder="Type your action... [square brackets] direct the story as the author"
                rows="1"
                style="overflow-y: hidden;"
              />
            </div>
            <button
              aria-label="About How to Play"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10 flex-shrink-0 border-primary text-primary mr-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-question-mark h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </button>
            <button
              aria-label="Send"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 px-4 py-2 border-dashed border-2 w-12 sm:w-32"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-send h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Narration Layout: Pages > renders the latest page unchanged 1`] = `
<div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm w-full flex-grow md:mx-0.5 md:min-w-0 md:basis-0 min-h-0 flex flex-col bg-background/60 border-border overflow-hidden"
  >
    <div
      class="flex-grow flex flex-col overflow-hidden p-4 sm:p-1"
    >
      <div
        class="flex flex-col flex-grow overflow-hidden gap-2 -mx-3 -mb-3 px-3 pb-3"
      >
        <div
          class="flex flex-col overflow-hidden narration-text flex-grow border border-border p-2 bg-muted/80 min-h-0 relative"
          dir="ltr"
          style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
        >
          <style>
            [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
          </style>
          <div
            class="w-full flex-auto min-h-0 rounded-[inherit] pr-[11px] [&>div]:!block"
            data-radix-scroll-area-viewport=""
            style="overflow-x: hidden; overflow-y: scroll;"
          >
            <div
              style="min-width: 100%; display: table;"
            >
              <div
                class="absolute top-2 right-2 z-10 flex gap-1"
              >
                <button
                  aria-controls="radix-:r0:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="More narration options"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground narration-tool h-8 w-8"
                  data-base-ui-tooltip-trigger=""
                  data-idle="true"
                  data-state="closed"
                  id="base-ui-:r1:"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="rounded-lg border border-border bg-card px-3.5 py-2.5"
                data-state="closed"
                style="--rl-o: 0;"
              >
                <div
                  class="mb-3 border-l-2 border-primary pl-3 text-label text-muted-foreground"
                  data-state="closed"
                  data-testid="action-line"
                >
                  <div
                    class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                  >
                    <div
                      class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                    >
                      <p>
                        I wave at the gull.
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="narration"
                >
                  <div
                    class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                  >
                    <div
                      class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                    >
                      <p>
                        The gull does not wave back.
                      </p>
                    </div>
                  </div>
                </div>
                <div
                  class="mt-2 flex items-center gap-0.5 border-t border-border pt-1.5"
                  data-testid="bubble-actions"
                >
                  <span
                    aria-hidden="true"
                    class="mr-auto text-meta text-muted-foreground"
                  >
                    Turn 
                    3
                  </span>
                  <button
                    aria-label="Re-generate Narration"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:rf:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-refresh-cw h-4 w-4 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
                      />
                      <path
                        d="M21 3v5h-5"
                      />
                      <path
                        d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
                      />
                      <path
                        d="M8 16H3v5"
                      />
                    </svg>
                  </button>
                  <button
                    aria-label="Edit"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:rg:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-pencil h-4 w-4 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                      />
                      <path
                        d="m15 5 4 4"
                      />
                    </svg>
                  </button>
                  <button
                    aria-label="Text to Speech"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:rh:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-headphones h-4 w-4 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 14h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a9 9 0 0 1 18 0v7a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2h3"
                      />
                    </svg>
                  </button>
                  <button
                    aria-label="Copy Text"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:ri:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-copy h-4 w-4 shrink-0"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="14"
                        rx="2"
                        ry="2"
                        width="14"
                        x="8"
                        y="8"
                      />
                      <path
                        d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                      />
                    </svg>
                  </button>
                  <button
                    aria-haspopup="menu"
                    aria-label="More"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-8 w-8"
                    data-base-ui-tooltip-trigger=""
                    id="base-ui-:rj:"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-ellipsis h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="12"
                        r="1"
                      />
                      <circle
                        cx="5"
                        cy="12"
                        r="1"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="mt-4"
                data-testid="choice-rows"
              >
                <div
                  class="overflow-hidden rounded-md border border-border"
                >
                  <div
                    class="flex items-stretch"
                  >
                    <button
                      aria-pressed="false"
                      class="flex min-w-0 flex-1 items-start px-3 py-2 text-left text-foreground transition-colors hover:bg-primary/10 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary aria-pressed:bg-primary aria-pressed:text-primary-foreground aria-pressed:focus-visible:ring-primary-foreground disabled:pointer-events-none"
                      type="button"
                    >
                      <span
                        class="min-w-0 flex-1 break-words"
                      >
                        <span>
                          Leave
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    class="flex items-stretch"
                  >
                    <button
                      aria-pressed="false"
                      class="flex min-w-0 flex-1 items-start px-3 py-2 text-left text-foreground transition-colors hover:bg-primary/10 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary aria-pressed:bg-primary aria-pressed:text-primary-foreground aria-pressed:focus-visible:ring-primary-foreground disabled:pointer-events-none border-t border-border"
                      type="button"
                    >
                      <span
                        class="min-w-0 flex-1 break-words"
                      >
                        <span>
                          Wait
                        </span>
                      </span>
                    </button>
                  </div>
                  <div
                    aria-hidden="true"
                    class="mx-3 mt-2 mb-1.5 flex items-center gap-3 text-muted-foreground"
                  >
                    <span
                      class="h-hairline flex-1 bg-border"
                    />
                    <span
                      class="text-helper"
                    >
                      or
                    </span>
                    <span
                      class="h-hairline flex-1 bg-border"
                    />
                  </div>
                  <div
                    class="flex items-stretch"
                  >
                    <button
                      aria-pressed="false"
                      class="flex min-w-0 flex-1 items-start px-3 py-2 text-left text-foreground transition-colors hover:bg-primary/10 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary aria-pressed:bg-primary aria-pressed:text-primary-foreground aria-pressed:focus-visible:ring-primary-foreground disabled:pointer-events-none"
                      type="button"
                    >
                      <span
                        class="min-w-0 flex-1 break-words"
                      >
                        [Continue the Story]
                      </span>
                    </button>
                    <span
                      aria-hidden="true"
                      class="my-2 w-hairline shrink-0 bg-border"
                    />
                    <div
                      class="flex shrink-0"
                    >
                      <button
                        aria-label="Re-generate Choices"
                        class="inline-flex items-center justify-center whitespace-nowrap text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-auto w-10 rounded-none border-0"
                        data-base-ui-tooltip-trigger=""
                        id="base-ui-:rk:"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-list-restart h-4 w-4 shrink-0"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21 5H3"
                          />
                          <path
                            d="M7 12H3"
                          />
                          <path
                            d="M7 19H3"
                          />
                          <path
                            d="M12 18a5 5 0 0 0 9-3 4.5 4.5 0 0 0-4.5-4.5c-1.33 0-2.54.54-3.41 1.41L11 14"
                          />
                          <path
                            d="M11 10v4h4"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col items-center gap-2"
        >
          <div
            data-surface-target="gameViewer#pager"
          >
            <nav
              aria-label="pagination"
              class="mx-auto flex w-full justify-center"
              role="navigation"
            >
              <ul
                class="flex flex-row items-center gap-1"
              >
                <li
                  class=""
                >
                  <a
                    aria-label="Go to previous page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pl-2.5"
                    href="#"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-left h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m15 18-6-6 6-6"
                      />
                    </svg>
                    <span
                      class="hidden md:inline"
                    >
                      Previous
                    </span>
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    1
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    2
                  </a>
                </li>
                <li
                  class=""
                >
                  <button
                    aria-controls="radix-:rl:"
                    aria-current="page"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="Page 3 of 3 — jump to a page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 w-10"
                    data-state="closed"
                    type="button"
                  >
                    3
                  </button>
                </li>
                <li
                  class=""
                >
                  <a
                    aria-disabled="true"
                    aria-label="Go to next page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pr-2.5 pointer-events-none opacity-50"
                    href="#"
                  >
                    <span
                      class="hidden md:inline"
                    >
                      Next
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-right h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9 18 6-6-6-6"
                      />
                    </svg>
                  </a>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="flex flex-col gap-2"
        >
          <div
            class="flex items-end"
            data-surface-target="gameViewer#action-box"
          >
            <div
              class="relative flex-grow mr-2 flex-shrink-0"
              data-testid="action-input-wrap"
              style="height: 40px;"
            >
              <textarea
                class="absolute inset-x-0 bottom-0 w-full resize-none rounded-md border border-input bg-background px-3 py-2 text-helper leading-normal placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 overflow-hidden whitespace-nowrap h-10"
                placeholder="Type your action... [square brackets] direct the story as the author"
                rows="1"
                style="overflow-y: hidden;"
              />
            </div>
            <button
              aria-label="About How to Play"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10 flex-shrink-0 border-primary text-primary mr-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-question-mark h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </button>
            <button
              aria-label="Send"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 px-4 py-2 border-dashed border-2 w-12 sm:w-32"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-send h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
